--- a/data/ps.yaml
+++ b/data/ps.yaml
@@ -1,8 +1,8 @@
-path: /jiliod
-train: /jiliod/train_images.txt
-val: /jiliod/val_images.txt
+path: /yolov7/dataset/ps_780680/
+train: /yolov7/dataset/ps_780680/train.txt
+# val: /jiliod/val_images.txt
 # test:  TODO 
 
 # number of classes
 nc: 2
-names: [ 'Person',  'Bike' ]
+names: [ 'slot',  'engaged' ]
